[package]
name = "ghctl"
version = "0.3.3"
edition = "2021"
description = "A GitHub command line utility"
documentation = "https://docs.rs/ghctl"
readme = "README.md"
homepage = "https://github.com/gitsudo-io/ghctl"
repository = "https://github.com/gitsudo-io/ghctl"
license = "MIT"
exclude = [
    ".github/*",
    "action.yml"
]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.71"
clap = { version = "4.2.5", features = ["cargo", "derive"] }
clap-verbosity-flag = "2.0.1"
env_logger = "0.10.0"
futures = "0.3.28"
http = "0.2.9"
hyper = "0.14.26"
log = "0.4.18"
octocrab = "0.29.1"
# octocrab = { git = "https://github.com/aisrael/octocrab.git", branch = "add-repo-list-environments" }
serde = "1.0.160"
serde_json = "1.0.96"
serde_yaml = "0.9.21"
tokio = { version = "1.28.0", features = ["full"] }
version = "3.0.0"
# Needed until Octocrab merges PR
url = { version = "2.2.2", features = ["serde"] }
chrono = { version = "0.4.19", default-features = false, features = [
    "serde",
    "clock",
] }
