[package]
name = "ghctl"
version = "0.4.0"
edition = "2021"
description = "A GitHub command line utility"
documentation = "https://docs.rs/ghctl"
readme = "README.md"
homepage = "https://github.com/gitsudo-io/ghctl"
repository = "https://github.com/gitsudo-io/ghctl"
license = "MIT"
exclude = [
    ".github/*",
    "action.yml"
]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.86"
clap = { version = "4.5.4", features = ["cargo", "derive"] }
clap-verbosity-flag = "2.0.1"
env_logger = "0.11.3"
futures = "0.3.30"
http = "1.0.0"
hyper = "1.3.0"
log = "0.4.21"
octocrab = "0.38.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.118"
serde_yaml = "0.9.21"
tokio = { version = "1.38.0", features = ["full"] }
version = "3.0.0"
# Needed until Octocrab merges PR
url = { version = "2.2.2", features = ["serde"] }
chrono = { version = "0.4.19", default-features = false, features = [
    "serde",
    "clock",
] }
http-body-util = "0.1.2"

[dev-dependencies]
cucumber = "0.21.1"

[[test]]
name = "cli"
harness = false
